// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select demo -- disabled 1`] = `
.c4 {
  vertical-align: baseline;
}

.c2 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  padding-right: 28px;
  box-sizing: border-box;
}

.c3 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
  background-color: #fff;
  pointer-events: none;
  color: #bbb;
}

.c0 .c1 {
  height: 28px;
  line-height: 28px;
  border: 1px none #c3cad9;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c0 .c1:hover {
  border-color: #3555f6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

.c0 .c1 {
  background: #f7f7f7;
  border-color: #d9d9d9;
  box-shadow: none;
  border-style: solid;
}

.c5 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
  background-color: #fff;
}

.c5 .c1 {
  height: 28px;
  line-height: 28px;
  border: 1px none #c3cad9;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c5 .c1:hover {
  border-color: #3555f6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
      disabled=""
    >
      <div>
        <div
          class="c1 c2"
          disabled=""
        >
          <div>
            1
          </div>
          <i
            class="c3 uc-fe-icon icon__down c4"
            type="down"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c5"
    >
      <div>
        <div
          class="c1 c2"
        >
          <div>
            1
          </div>
          <i
            class="c3 uc-fe-icon icon__down c4"
            type="down"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select demo -- group 1`] = `
.c4 {
  vertical-align: baseline;
}

.c2 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  padding-right: 28px;
  box-sizing: border-box;
}

.c3 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c5 .c1 {
  height: 28px;
  line-height: 28px;
  border: 1px none #c3cad9;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c5 .c1:hover {
  border-color: #3555f6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

.c5 .c1 {
  background: #f7f7f7;
  border-color: #d9d9d9;
  box-shadow: none;
  border-style: solid;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
  background-color: #fff;
}

.c0 .c1 {
  height: 28px;
  line-height: 28px;
  border: 1px none #c3cad9;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c0 .c1:hover {
  border-color: #3555f6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

<div>
  <div
    class="c0"
  >
    <div>
      <div
        class="c1 c2"
      >
        <div>
          2
        </div>
        <i
          class="c3 uc-fe-icon icon__down c4"
          type="down"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Select demo -- multiple 1`] = `
.c4 {
  vertical-align: baseline;
}

.c2 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  padding-right: 28px;
  box-sizing: border-box;
}

.c3 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c5 .c1 {
  height: 28px;
  line-height: 28px;
  border: 1px none #c3cad9;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c5 .c1:hover {
  border-color: #3555f6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

.c5 .c1 {
  background: #f7f7f7;
  border-color: #d9d9d9;
  box-shadow: none;
  border-style: solid;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
  background-color: #fff;
}

.c0 .c1 {
  height: 28px;
  line-height: 28px;
  border: 1px none #c3cad9;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c0 .c1:hover {
  border-color: #3555f6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

<div>
  <div
    class="c0"
  >
    <div>
      <div
        class="c1 c2"
      >
        <div>
          已选择 2 项
        </div>
        <i
          class="c3 uc-fe-icon icon__down c4"
          type="down"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Select demo -- popoverProps 1`] = `
.c4 {
  vertical-align: baseline;
}

.c2 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  padding-right: 28px;
  box-sizing: border-box;
}

.c3 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c5 .c1 {
  height: 28px;
  line-height: 28px;
  border: 1px none #c3cad9;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c5 .c1:hover {
  border-color: #3555f6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

.c5 .c1 {
  background: #f7f7f7;
  border-color: #d9d9d9;
  box-shadow: none;
  border-style: solid;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
  background-color: #fff;
}

.c0 .c1 {
  height: 28px;
  line-height: 28px;
  border: 1px none #c3cad9;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c0 .c1:hover {
  border-color: #3555f6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div>
        <div
          class="c1 c2"
        >
          <div>
            1
          </div>
          <i
            class="c3 uc-fe-icon icon__down c4"
            type="down"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div>
        <div
          class="c1 c2"
        >
          <div>
            1
          </div>
          <i
            class="c3 uc-fe-icon icon__down c4"
            type="down"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div>
        <div
          class="c1 c2"
        >
          <div>
            1
          </div>
          <i
            class="c3 uc-fe-icon icon__down c4"
            type="down"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div>
        <div
          class="c1 c2"
        >
          <div>
            1
          </div>
          <i
            class="c3 uc-fe-icon icon__down c4"
            type="down"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select demo -- renderContent 1`] = `
.c4 {
  vertical-align: baseline;
}

.c2 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  padding-right: 28px;
  box-sizing: border-box;
}

.c3 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c5 .c1 {
  height: 28px;
  line-height: 28px;
  border: 1px none #c3cad9;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c5 .c1:hover {
  border-color: #3555f6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

.c5 .c1 {
  background: #f7f7f7;
  border-color: #d9d9d9;
  box-shadow: none;
  border-style: solid;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
  background-color: #fff;
}

.c0 .c1 {
  height: 28px;
  line-height: 28px;
  border: 1px none #c3cad9;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c0 .c1:hover {
  border-color: #3555f6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div>
        <div
          class="c1 c2"
        >
          <div>
            <span
              style="color:red;"
            >
              1
            </span>
          </div>
          <i
            class="c3 uc-fe-icon icon__down c4"
            type="down"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select demo -- renderSelector 1`] = `
.c2 {
  vertical-align: baseline;
}

.c1 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  background: #fff;
  border-color: #c3cad9;
  border: none;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c1:hover {
  color: #3555f6;
  background: #fff;
  border-color: #4683e6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
  background-color: #fff;
}

.c0 .c3 {
  height: 28px;
  line-height: 28px;
  border: 1px none #c3cad9;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c0 .c3:hover {
  border-color: #3555f6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div>
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c1"
          type="button"
        >
          <i
            class="uc-fe-button-icon uc-fe-icon icon__check c2"
            type="check"
          />
          一
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select demo -- search 1`] = `
.c4 {
  vertical-align: baseline;
}

.c2 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  padding-right: 28px;
  box-sizing: border-box;
}

.c3 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c5 .c1 {
  height: 28px;
  line-height: 28px;
  border: 1px none #c3cad9;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c5 .c1:hover {
  border-color: #3555f6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

.c5 .c1 {
  background: #f7f7f7;
  border-color: #d9d9d9;
  box-shadow: none;
  border-style: solid;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
  background-color: #fff;
}

.c0 .c1 {
  height: 28px;
  line-height: 28px;
  border: 1px none #c3cad9;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c0 .c1:hover {
  border-color: #3555f6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div>
        <div
          class="c1 c2"
        >
          <div>
            1
          </div>
          <i
            class="c3 uc-fe-icon icon__down c4"
            type="down"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div>
        <div
          class="c1 c2"
        >
          <div>
            1
          </div>
          <i
            class="c3 uc-fe-icon icon__down c4"
            type="down"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select demo -- select 1`] = `
.c12 {
  vertical-align: baseline;
}

.c11 {
  margin-right: 8px;
  font-size: 14px;
}

.c9 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c13 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c13 .c10 {
  color: #3555f6;
}

.c7 {
  position: relative;
  margin-bottom: -8px;
}

.c7 .c8,
.c7 .style__RadioTagWrap-sc-25j3mq-3 {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c7 .c8:last-child,
.c7 .style__RadioTagWrap-sc-25j3mq-3:last-child {
  margin-right: 0;
}

.c7 .c31 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c7 .c31:last-child {
  margin-right: 0;
}

.c7 .c32+.c32 {
  margin-left: -1px;
}

.c7 .c30 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c7 .c30:first-child {
  border-radius: 2px 0 0 2px;
}

.c7 .c30:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c14 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #0a1633;
}

.c14 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c14 input {
  border: 1px solid #dfe0f1;
  background: #fafafc;
  height: 28px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c14 input:hover {
  border-color: #c3cad9;
  background-color: #f6f6fb;
}

.c14 input:focus {
  border-color: #3555f6;
  background-color: #f6f6fb;
}

.c14 input:disabled,
.c14 input[disabled] {
  box-shadow: none;
}

.c14 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c14 input::-moz-placeholder {
  color: #abb4c3;
}

.c14 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c14 input::placeholder {
  color: #abb4c3;
}

.c14 .c33 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c27 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  padding-right: 28px;
  box-sizing: border-box;
}

.c28 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c29 .c26 {
  height: 28px;
  line-height: 28px;
  border: 1px none #c3cad9;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c29 .c26:hover {
  border-color: #3555f6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

.c29 .c26 {
  background: #f7f7f7;
  border-color: #d9d9d9;
  box-shadow: none;
  border-style: solid;
}

.c25 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
  background-color: #fff;
}

.c25 .c26 {
  height: 28px;
  line-height: 28px;
  border: 1px none #c3cad9;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c25 .c26:hover {
  border-color: #3555f6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

.c17 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c19 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c22 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c24 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c15 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c15:hover {
  border-color: #3555f6;
}

.c15 .c21 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c15 .c23 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c15 .c16 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c15 .c18,
.c15 .c20 {
  line-height: 16px;
}

.c15 .c18 {
  padding-right: 20px;
}

.c15 .c20 {
  padding-left: 20px;
}

.c15 .c18 {
  display: none;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        size
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="c10 c11 uc-fe-icon icon__circle c12"
              type="circle"
            />
            sm
          </div>
          <div
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="c10 c11 uc-fe-icon icon__cbox-ed c12"
              type="cbox-ed"
            />
            md
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="c10 c11 uc-fe-icon icon__circle c12"
              type="circle"
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        placeholder
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <span
          class="uc-fe-input c14"
        >
          <input
            value="placeholder"
          />
        </span>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        multiple
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c15"
          value="false"
        >
          <div
            class="c16 c17"
          >
            <span
              class="c18 c19"
            >
              ON
            </span>
            <span
              class="c20 c19"
            >
              OFF
            </span>
            <span
              class="c21 c22"
            >
              <span
                class="c23 c24"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        showSelectAll
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c15"
        >
          <div
            class="c16 c17"
          >
            <span
              class="c18 c19"
            >
              ON
            </span>
            <span
              class="c20 c19"
            >
              OFF
            </span>
            <span
              class="c21 c22"
            >
              <span
                class="c23 c24"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        disabled
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c15"
          value="false"
        >
          <div
            class="c16 c17"
          >
            <span
              class="c18 c19"
            >
              ON
            </span>
            <span
              class="c20 c19"
            >
              OFF
            </span>
            <span
              class="c21 c22"
            >
              <span
                class="c23 c24"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        search
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c15"
          value="false"
        >
          <div
            class="c16 c17"
          >
            <span
              class="c18 c19"
            >
              ON
            </span>
            <span
              class="c20 c19"
            >
              OFF
            </span>
            <span
              class="c21 c22"
            >
              <span
                class="c23 c24"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="c25"
      placeholder="placeholder"
    >
      <div>
        <div
          class="c26 c27"
        >
          <div>
            placeholder
          </div>
          <i
            class="c28 uc-fe-icon icon__down c12"
            type="down"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select demo -- showSelectAll 1`] = `
.c4 {
  vertical-align: baseline;
}

.c2 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  padding-right: 28px;
  box-sizing: border-box;
}

.c3 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c5 .c1 {
  height: 28px;
  line-height: 28px;
  border: 1px none #c3cad9;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c5 .c1:hover {
  border-color: #3555f6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

.c5 .c1 {
  background: #f7f7f7;
  border-color: #d9d9d9;
  box-shadow: none;
  border-style: solid;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
  background-color: #fff;
}

.c0 .c1 {
  height: 28px;
  line-height: 28px;
  border: 1px none #c3cad9;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c0 .c1:hover {
  border-color: #3555f6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div>
        <div
          class="c1 c2"
        >
          <div>
            请选择
          </div>
          <i
            class="c3 uc-fe-icon icon__down c4"
            type="down"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select demo -- size 1`] = `
.c4 {
  vertical-align: baseline;
}

.c2 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  padding-right: 28px;
  box-sizing: border-box;
}

.c3 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c7 .c1 {
  height: 28px;
  line-height: 28px;
  border: 1px none #c3cad9;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c7 .c1:hover {
  border-color: #3555f6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

.c7 .c1 {
  background: #f7f7f7;
  border-color: #d9d9d9;
  box-shadow: none;
  border-style: solid;
}

.c5 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
  background-color: #fff;
}

.c5 .c1 {
  height: 28px;
  line-height: 28px;
  border: 1px none #c3cad9;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c5 .c1:hover {
  border-color: #3555f6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
  background-color: #fff;
}

.c0 .c1 {
  height: 22px;
  line-height: 22px;
  border: 1px none #c3cad9;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c0 .c1:hover {
  border-color: #3555f6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

.c6 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
  background-color: #fff;
}

.c6 .c1 {
  height: 32px;
  line-height: 32px;
  border: 1px none #c3cad9;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c6 .c1:hover {
  border-color: #3555f6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div>
        <div
          class="c1 c2"
        >
          <div>
            1
          </div>
          <i
            class="c3 uc-fe-icon icon__down c4"
            type="down"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c5"
    >
      <div>
        <div
          class="c1 c2"
        >
          <div>
            1
          </div>
          <i
            class="c3 uc-fe-icon icon__down c4"
            type="down"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c6"
    >
      <div>
        <div
          class="c1 c2"
        >
          <div>
            1
          </div>
          <i
            class="c3 uc-fe-icon icon__down c4"
            type="down"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select demo -- uncontrolled 1`] = `
.c4 {
  vertical-align: baseline;
}

.c2 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  padding-right: 28px;
  box-sizing: border-box;
}

.c3 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c5 .c1 {
  height: 28px;
  line-height: 28px;
  border: 1px none #c3cad9;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c5 .c1:hover {
  border-color: #3555f6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

.c5 .c1 {
  background: #f7f7f7;
  border-color: #d9d9d9;
  box-shadow: none;
  border-style: solid;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
  background-color: #fff;
}

.c0 .c1 {
  height: 28px;
  line-height: 28px;
  border: 1px none #c3cad9;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c0 .c1:hover {
  border-color: #3555f6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

.c6 .c1 {
  height: 22px;
  line-height: 22px;
  border: 1px none #c3cad9;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c6 .c1:hover {
  border-color: #3555f6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

.c7 .c1 {
  height: 32px;
  line-height: 32px;
  border: 1px none #c3cad9;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c7 .c1:hover {
  border-color: #3555f6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

<div>
  <div
    class="c0"
  >
    <div>
      <div
        class="c1 c2"
      >
        <div>
          1
        </div>
        <i
          class="c3 uc-fe-icon icon__down c4"
          type="down"
        />
      </div>
    </div>
  </div>
</div>
`;
